--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,4 @@
-/*!   
+/*!
  * Template Name: Developer - Portfolio Landing Page Template for Developers
  * Version: 2.3
  * Author: Xiaoying Riley
@@ -702,7 +702,7 @@ a.dotted-link:hover {
   margin: auto;
   display: block;
   width: 90%;
-  height : 90%;
+  /* height : 90%; */
   /* max-width: 700px; */
 }
 
@@ -750,6 +750,6 @@ a.dotted-link:hover {
 /* 100% Image Width on Smaller Screens */
 @media only screen and (max-width: 700px){
   .modal-content {
-    width: 100%;
+    width: 70%;
   }
 }
